...
        if let travelDetails = viewModel.selectedTravel {
            VStack {
                ScrollView {
                    VStack {
                        HeaderView(from: travelDetails.getDepartureSegment()?.departureCity ?? "", to: travelDetails.getDestinationSegment()?.destinationCity ?? "", date: travelDetails.segments.first?.dateTime, dateArrival: travelDetails.segments.last?.getArrivalDateTime())
                            .accessibilityElement(children: .contain)
                            .overlay(Color.clear.accessibilityIdentifier("headerView"))
                        
                        // horizontal line
                        Rectangle()
                            .frame(height: 1)
                            .foregroundStyle(.gray)
                        
...
                                CO2CompensationView(viewModel: viewModel, infoTapped: $infoTapped, showAlertCompensation: $showAlertCompensation, plantedTrees: $plantedTrees)
                            } else {
                                // recap full width
                                Co2RecapView(halfWidth: false, co2Emitted: travelDetails.computeCo2Emitted(), numTrees: viewModel.getNumTrees(), distance: travelDetails.computeTotalDistance())
                                    .padding()
                                    .accessibilityElement(children: .contain)
                                    .overlay(Color.clear.accessibilityIdentifier("emissionsRecapFutureTravel"))
                            }
                            
                            // travel recap
                            TravelRecapView(singleColumn: true, distance: travelDetails.computeTotalDistance(), duration: travelDetails.computeTotalDuration(), price: travelDetails.computeTotalPrice(), greenPrice: travelDetails.computeGreenPrice())
                                .padding(.horizontal)
                                .accessibilityElement(children: .contain)
                                .overlay(Color.clear.accessibilityIdentifier("travelRecap"))
                                .padding(.vertical)
                            
                        } else {
                            // iPadOS
                            
                            VStack {
...
                        
                        if travelDetails.travel.confirmed {
                            // if the user hasn't left a review yet
                            let city = travelDetails.getDestinationSegment()?.destinationCity
                            let country = travelDetails.getDestinationSegment()?.destinationCountry
                            InsertReviewButtonView(viewModel: reviewViewModel, reviewTapped: $reviewTapped, city: city, country: country, isPresenting: $isPresenting)
                                .accessibilityIdentifier("reviewButton")
                        }
                        
                        SegmentsDetailsView(travelDetails: travelDetails)
                            .frame(maxWidth: 800)
                            .padding(.leading)
                        
...
                                    await viewModel.deleteTravel()
                                    if !viewModel.errorOccurred {
                                        navigationPath.removeLast()
                                    }
                                }
                            }
                            .accessibilityIdentifier("confirmDeleteButton")
                            
                            Button("Cancel", role: .cancel) {}
                                .accessibilityIdentifier("cancelDeleteButton")
                            
                        } message: {
                            Text("You cannot undo this action")
                        }
                        .accessibilityIdentifier("trashButton")
                    }
                    .padding(10)
                    
                    Spacer()
                }
            }
...
                    .presentationCornerRadius(15)
            }
            .sheet(isPresented: $infoTapped) {
                InfoCompensationView(isPresented: $infoTapped)
                    .presentationDetents([.fraction(0.75)])
                    .presentationCornerRadius(15)
                    .overlay(Color.clear.accessibilityIdentifier("infoCompensationView"))
            }
            .ignoresSafeArea(edges: [.bottom, .horizontal])
            .background(colorScheme == .dark ? AppColors.backColorDark : AppColors.backColorLight)
            .onAppear() {
                isPresenting = false
                reviewViewModel.userReview = travelDetails.travel.userReview
...
            
            VStack {
                HStack {
                    Text(travelDetails.isOneway() ? "Segments" : "Outward")
                        .font(.title)
                        .fontWeight(.semibold)
                        .accessibilityIdentifier("segmentsTitle")
                        .padding(.horizontal, 15)
                    Spacer()
                }
                .padding(.top)
                
                SegmentsView(segments: travelDetails.getOutwardSegments())
                    .accessibilityElement(children: .contain)
                    .overlay(Color.clear.accessibilityIdentifier("outwardSegmentsView"))
                
                if !travelDetails.isOneway() {
                    HStack {
                        Text("Return")
                            .font(.title)
                            .fontWeight(.semibold)
                            .accessibilityIdentifier("returnTitle")
                        Spacer()
                    }
                    .padding()
                    
                    SegmentsView(segments: travelDetails.getReturnSegments())
                        .accessibilityElement(children: .contain)
                        .overlay(Color.clear.accessibilityIdentifier("returnSegmentsView"))
                }
            }
        } else {
            // iPadOS
            
            VStack {
...
