...
                    infoTapped = true
                }) {
                    Image(systemName: "info.circle")
                        .font(.title3)
                }
                .padding(.trailing)
                .accessibilityIdentifier("infoCompensationButton")
                
            }
            Spacer()
        }
    }
}
...
                                            .font(.system(size: 26))
                                            .fontWeight(.light)
                                            .foregroundStyle(plantedTrees == totalTrees ? .secondary : AppColors.mainColor)
                                        
                                    }
                                    .disabled(plantedTrees == totalTrees)
                                    .accessibilityIdentifier("plusButton")
                                    
                                    Button(action: {
                                        if plantedTrees > 0 {
                                            plantedTrees -= 1
                                            viewModel.compensatedPrice -= 2
                                        }
...
                                        Image(systemName: "minus.circle")
                                            .font(.system(size: 26))
                                            .fontWeight(.light)
                                            .foregroundStyle(plantedTrees==viewModel.getPlantedTrees(travelDetails) ? .secondary : AppColors.mainColor)
                                    }
                                    .disabled(plantedTrees==viewModel.getPlantedTrees(travelDetails))
                                    .accessibilityIdentifier("minusButton")
                                }
                                
                                Spacer()
                                
                                HStack {
                                    Text("\(plantedTrees) / \(totalTrees)")
...
                        plantedTrees = viewModel.getPlantedTrees(travelDetails)
                        
                    }
                }
            )
        }
        .accessibilityIdentifier("compensateButton")
    }
}

